GNOME Bugzilla – Bug 684308
Crash when quickly closing a window while loading
Last modified: 2012-09-18 17:03:20 UTC
- open Nautilus - as soon as the window appears, press Ctrl+W immediately - crash (gdb) bt
+ Trace 230869
Created attachment 224646 [details] [review] view: don't NULL the slot until the end of destroy Since some of the calls we make (e.g. nautilus_view_stop_loading) might access the slot, causing a segfault.
Attachment 224646 [details] pushed as 2234c4a - view: don't NULL the slot until the end of destroy Pushed after r-t approval.