view: don't NULL the slot until the end of destroy

Since some of the calls we make (e.g. nautilus_view_stop_loading) might
access the slot, causing a segfault.

https://bugzilla.gnome.org/show_bug.cgi?id=684308